<resources>
    <string name="app_name">TutorialAndroidAmplify</string>
    <!-- SIGN UP -->
    <string name="username">enter username</string>
    <string name="email">enter email</string>
    <string name="password">enter password</string>
    <string name="signupbtn">Sign Up</string>
    <string name="signinbtn">Sign In</string>
    <!-- CONFIRM -->
    <string name="code">enter code</string>
    <string name="verify">Verify</string>
    <!-- HOME -->
    <string name="signoutbtn">Sign Out</string>
</resources>